--- a/docs/篇章2-Transformer相关原理/2.1-图解attention.md
+++ b/docs/篇章2-Transformer相关原理/2.1-图解attention.md
@@ -65,7 +65,7 @@ RNN 在第 2 个时间步，采用第 1 个时间步的 hidden state（隐藏层
 
 ![在第7个时间步，注意力机制使得解码器在产生英语翻译之前，可以将注意力集中在 "student" 这个词（在法语里，是 "student" 的意思）。这种从输入序列放大相关信号的能力，使得注意力模型，比没有注意力的模型，产生更好的结果。](./pictures/1-7-attetion.png) 图：在第 7 个时间步，注意力机制使得解码器在产生英语翻译之前，可以将注意力<u>集中</u>在 "student" 这个词（在法语里，是 "student" 的意思)。这种从输入序列放大相关信号的能力，使得注意力模型，比没有注意力的模型，产生更好的结果。
 
-让我们继续从高层次来理解注意力模型。一个注意力模型不同于经典的序列到序列（seq2seq）模型，主要体现在 2 个方面：
+让我们继续从高层次来理解注意力模型。一个**注意力模型**不同于经典的序列到序列（seq2seq）模型，主要体现在 2 个方面：
 
 第一，编码器会把更多的数据传递给解码器。编码器把**所有时间步的 hidden state**（隐藏层状态）传递给解码器，而不是只传递最后一个 hidden state（隐藏层状态）:
 ![](./pictures/1-6-mt-1.gif) 动态图: 更多的信息传递给decoder
