--- a/docs/篇章2-Transformer相关原理/2.2-图解transformer.md
+++ b/docs/篇章2-Transformer相关原理/2.2-图解transformer.md
@@ -83,7 +83,7 @@ Transformer 使用了 Seq2Seq任务中常用的结构——包括两个部分：
 图：输入encoder
 
 
-这里我们可以注意到 Transformer 的一个重要特性：每个位置的词向量经过编码器都有自己单独的路径。具体来说，在 Self Attention 层中，这些路径之间是有依赖关系的；而在 Feed Forward （前馈神经网络）层中，这些路径之间是没有依赖关系的。因此这些词向量在经过 Feed Forward 层中可以并行计算（*这句话会造成困扰，我认为在 Self Attention 层中，也能并行计算，没有必要单独说 Feed Forward 层也可以并行计算*）。
+这里我们可以注意到 Transformer 的一个重要特性：**每个位置的词向量经过编码器都有自己单独的路径。具体来说，在 Self Attention 层中，这些路径之间是有依赖关系的；而在 Feed Forward （前馈神经网络）层中，这些路径之间是没有依赖关系的**。因此这些词向量在经过 Feed Forward 层中可以并行计算（*这句话会造成困扰，我认为在 Self Attention 层中，也能并行计算，没有必要单独说 Feed Forward 层也可以并行计算*）。
 
 下面我们用一个更短的句子，来说明数据在编码器的编码过程。
 
@@ -171,7 +171,7 @@ Query 向量，Key 向量，Value 向量是什么含义呢？
 
 ## 使用矩阵计算 Self-Attention
 
-第一步是计算 Query，Key，Value 的矩阵。首先，我们把所有词向量放到一个矩阵 X 中，然后分别和3 个权重矩阵$W^Q, W^K W^V$​​ 相乘，得到 Q，K，V 矩阵。（**X是2个单词，每个单词由4个embedding组成**）
+第一步是计算 Query，Key，Value 的矩阵。首先，我们把所有词向量放到一个矩阵 X 中，然后分别和3 个权重矩阵$W^Q, W^K W^V$​ 相乘，得到 Q，K，V 矩阵。（**X由2个单词的行向量组成，每个单词有4个embedding**）
 
 ![](./pictures/2-qkv-multi.png)图：QKV矩阵乘法
 
@@ -420,7 +420,7 @@ x = x.view(bsz, -1, self.n_heads * (self.hid_dim // self.n_heads))
 
 到目前为止，我们阐述的模型中缺失了一个东西，那就是**表示序列中单词顺序的方法**。
 
-为了解决这个问题，Transformer 模型对每个输入的向量都添加了一个向量。这些向量遵循模型学习到的特定模式，有助于确定每个单词的位置，或者句子中不同单词之间的距离。这种做法背后的直觉是：将这些表示位置的向量添加到词向量中，得到了新的向量，这些新向量映射到 Q/K/V，然后计算点积得到 attention 时，可以提供有意义的信息。
+为了解决这个问题，Transformer 模型对每个输入的向量都添加了一个向量。这些向量遵循模型学习到的特定模式，**有助于确定每个单词的位置，或者句子中不同单词之间的距离**。这种做法背后的直觉是：将这些表示位置的向量添加到词向量中，得到了新的向量，这些新向量映射到 Q/K/V，然后计算点积得到 attention 时，可以提供有意义的信息。
 
 ![位置编码](./pictures/2-position.png)
 图：位置编码
@@ -472,18 +472,18 @@ x = x.view(bsz, -1, self.n_heads * (self.hid_dim // self.n_heads))
 
 现在我们已经介绍了解码器中的大部分概念，我们也基本知道了解码器的原理。现在让我们来看下， **编码器和解码器是如何协同工作**的。
 
-上面说了，编码器一般有多层，第一个编码器的输入是一个序列，最后一个编码器输出是一组注意力向量 K 和 V。这些注意力向量将会输入到每个解码器的Encoder-Decoder Attention层，这有助于解码器把注意力集中中输入序列的合适位置。
+上面说了，编码器一般有多层，第一个编码器的输入是一个序列，**最后一个编码器输出是一组注意力向量 K 和 V**。这些注意力向量将会输入到每个解码器的Encoder-Decoder Attention层，这有助于解码器把注意力集中中输入序列的合适位置。
 
 在完成了编码（encoding）阶段之后，我们开始解码（decoding）阶段。每一个时间步都输出一个翻译后的单词。
 
-接下来会重复这个过程，直到输出一个结束符，Transformer 就完成了所有的输出。每一步的输出都会在下一个时间步输入到下面的第一个解码器。Decoder 就像 Encoder 那样，从下往上一层一层地输出结果。正对如编码器的输入所做的处理，我们把解码器的输入向量，也加上位置编码向量，来指示每个词的位置。
+接下来会重复这个过程，直到输出一个<u>结束符</u>，Transformer 就完成了所有的输出。每一步的输出都会在下一个时间步输入到下面的第一个解码器。Decoder 就像 Encoder 那样，从下往上一层一层地输出结果。正对如编码器的输入所做的处理，我们把解码器的输入向量，也加上位置编码向量，来指示每个词的位置。
 
 ![decoder动态图](./pictures/2-decoder.gif)
 动态图：decoder动态图
 
 解码器中的 Self Attention 层，和编码器中的 Self Attention 层不太一样：**在解码器里，Self Attention 层只允许关注到输出序列中早于当前位置之前的单词**（还不知道后续的输出是什么）。具体做法是：**在 Self Attention 分数经过 Softmax 层之前，屏蔽当前位置之后的那些位置**。
 
-Encoder-Decoder Attention层的原理和多头注意力（multiheaded Self Attention）机制类似，不同之处是：Encoder-Decoder Attention层是**使用前一层的输出来构造 Query 矩阵**，而 Key 矩阵和 Value 矩阵来自于解码器最终的输出。
+Encoder-Decoder Attention层的原理和多头注意力（multiheaded Self Attention）机制类似，不同之处是：Encoder-Decoder Attention层是<span style='color:red'>**使用前一层的输出来构造 Query 矩阵**</span>，而 Key 矩阵和 Value 矩阵来自于**编**码器最终的输出。
 
 ## 最后的线性层和 Softmax 层
 
