--- a/docs/篇章2-Transformer相关原理/2.4-图解GPT.md
+++ b/docs/篇章2-Transformer相关原理/2.4-图解GPT.md
@@ -299,7 +299,7 @@ Self-Attention 主要通过 3 个步骤来实现：
 - 诸如此类，继续处理后面的单词。
 
 
-### GPT2 的 Self-Attention
+### GPT2 的 Masked Self-Attention
 
 让我们更详细地了解 GPT-2 的 masked attention。
 
